--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "peerDependencies": {
     "lodash": "^4.17.5",
     "path-to-regexp": "^3.0.0",
+    "react": "^16.10.2",
     "react-redux": "^7.1.0",
     "redux": "^3.7.2",
     "rxjs": "^5.5.7"
