--- a/package.json
+++ b/package.json
@@ -66,5 +66,9 @@
     "react-redux": "^7.1.0",
     "redux": "^3.7.2",
     "rxjs": "^5.5.7"
+  },
+  "dependencies": {
+    "final-form": "^4.18.6",
+    "react-final-form": "^6.3.3"
   }
 }
