--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lodash": "^4.17.5",
     "react": "^16.10.2",
     "react-redux": "^7.1.0",
-    "redux": "^3.7.2",
+    "redux": "^3.7.2"
   },
   "keywords": [
     "react",
@@ -50,11 +50,7 @@
     "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-standard": "^4.0.1",
-    "lodash": "^4.17.5",
-    "react-redux": "^7.1.0",
-    "redux": "^3.7.2",
-    "rxjs": "^5.5.7"
+    "eslint-plugin-standard": "^4.0.1"
   },
   "dependencies": {
     "final-form": "^4.18.6",
